packages/compiler/tests/fixtures/invalid/browser-document.svelte
<script>
  const el = document.querySelector('.foo')
</script>
<text>Document</text>
